--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
 
     <string name="text_search">search</string>
     <string name="text_logout">logout</string>
-    <string name="text_post">Post</string>
-    <string name="text_chat">Chat</string>
+    <string name="text_post">News Feed</string>
+    <string name="text_chat">Message</string>
     <string name="text_event">Event</string>
 
     <!-- TODO: Remove or change this placeholder text -->
@@ -13,4 +13,6 @@
     <string name="text_date">Yesterday 10.00am</string>
     <string name="text_description">description</string>
     <string name="text_content">Hello world! This is default posting. Feel free to write more. There is more line.</string>
+    <string name="text_like">Likes</string>
+    <string name="text_comment">Comment</string>
 </resources>
